# posix_freertos_project

./: README.md
FreeRTOS-Kernel/include/: FreeRTOSConfig.h
posix_freertos_demo/: CMakeLists.txt  README.md
posix_freertos_demo/src/: main.c
posix_freertos_synchro/: CMakeLists.txt  README.md
posix_freertos_synchro/inc/: counter_tasks.h  timer_tasks.h
posix_freertos_synchro/src/: counter_tasks.c  main.c  timer_tasks.c
